[ROGUE]Fix minor css issue when container was too small.

--- a/app/components/nav-bar/style.less
+++ b/app/components/nav-bar/style.less
@@ -4,6 +4,7 @@
     justify-content: center;
     align-items: center;
     height: 85px;
+    min-height: 85px;
     background-color: @rogue-grey;
 
     .nav-icon {
