--- a/app/components/presence-selector/style.less
+++ b/app/components/presence-selector/style.less
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: row;
     height: 45px;
+    min-height: 45px;
     background-color: @rogue-grey;
     padding: 10px 20px;
 
